# CRIS

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  WhatItAchieves.md  chunking_and_extraction_detail.html  ncrb_rag_xgboost_scaffold.py  pyproject.toml  rag_xgboost_architecture.html
configs/: default.yaml
src/cris/: __init__.py  cli.py  config.py
tests/: test_cli.py
