[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cris"
version = "0.1.0"
description = "Crime Records Intelligence System for NCRB retrieval, extraction, and prediction."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "Proprietary" }
authors = [
  { name = "MVP Projects" }
]
dependencies = [
  "chromadb>=1.0.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "joblib>=1.5.0",
  "numpy>=2.2.0",
  "orjson>=3.10.0",
  "pandas>=2.3.0",
  "pdfplumber>=0.11.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.9.0",
  "python-dotenv>=1.1.0",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.7.0",
  "sentence-transformers>=5.1.0",
  "shap>=0.49.0",
  "spacy>=3.8.0",
  "typer>=0.16.0",
  "uvicorn>=0.35.0",
  "xgboost>=3.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0"
]

[project.scripts]
cris = "cris.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
